- Fixed endpoint; user can now register, get all users, get a user by email, delete a user by email - Added JPL Query to find a cart by the user email - Renamed classes, variables and the "CUSTOMER" entity to "ACCOUNT"